[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/tower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
bullet_scene = ExtResource( 1 )

[node name="tower" parent="." instance=ExtResource( 2 )]
position = Vector2( 510, 296 )

[node name="bullet" parent="." instance=ExtResource( 1 )]
position = Vector2( 665, 63 )
rotation = 0.0880613

[node name="bullet_path" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="bullet_spawn" type="PathFollow2D" parent="bullet_path"]

[node name="bullet_timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="bullet_timer" to="." method="_on_bullet_timer_timeout"]
